--- a/v1_20_R2/pom.xml
+++ b/v1_20_R2/pom.xml
@@ -10,21 +10,22 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>supersign-v1_20_R2</artifactId>
-    <packaging>jar</packaging>
-    <name>SuperSign-v1_20_R2</name>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <minecraft.version>1.20.2</minecraft.version>
+        <nms.version>v1_20_R2</nms.version>
     </properties>
+
+    <artifactId>supersign-${nms.version}</artifactId>
+    <packaging>jar</packaging>
+    <name>SuperSign-${nms.version}</name>
 
     <dependencies>
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.26</version>
-            <scope>provided</scope>
+            <groupId>me.cyrzu.git</groupId>
+            <artifactId>supersign-core</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
@@ -36,12 +37,6 @@
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot</artifactId>
             <version>${minecraft.version}-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>me.cyrzu.git</groupId>
-            <artifactId>supersign-core</artifactId>
-            <version>1.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
